--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -115,6 +115,12 @@
   height: 1em;
 }
 
+.test {
+  font-family: a-otf-futo-go-b101-pr6n, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
