--- a/components/template/home/styles.module.css
+++ b/components/template/home/styles.module.css
@@ -3,15 +3,16 @@
     box-sizing: border-box;
     height: 100vh;
     width: 100%;
-    display: flex;
-    justify-content: center;
+}
+
+.borderContents {
+    height: 100%;
+    margin: 0px auto;
     align-items: flex-end;
 }
 
 .titleContainer {
     display: flex;
-    height: 100%;
-    width: 276px;
     background-color: #98DAF4;
     align-items: center;
     justify-content: center;
@@ -32,10 +33,13 @@
 }
 
 .lifeSizeImage {
-    width: 398px;
-    height: 748px;
+    height: calc(100vh * 0.8);
     bottom: 20px;
-    margin-left: 125px;
+}
+
+.vioContents {
+    width: 80%;
+    margin: 0 auto;
 }
 
 .vioContents > p {
@@ -45,14 +49,68 @@
 .recommendProductsContainer {
     display: flex;
     justify-content: center;
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
 }
 
-.recommendProducts {
-    display: flex;
-    width: 80%;
-    justify-content: space-around
+.recommendProducts > * {
+    display: inline-block;
+    margin: 0 auto;
+    padding: 10px;
 }
 
 .vioContents, .recommendProductsContainer {
     padding-bottom: 84px;
+}
+
+@media screen and (min-width: 900px) {
+
+    .titleContainer {
+        width: 275px;
+        height: 100%;
+    }
+
+    .lifeSizeImage {
+        margin-left: auto;
+    }
+
+    .borderContents {
+        display: flex;
+        width: 70%;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .titleContainer {
+        width: 100%;
+        height: 20%;
+    }
+
+    .lifeSizeImage {
+        height: 80%;
+    }
+
+    .borderContents {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .titleContainer {
+        height: auto;
+        padding: 20px 0;
+    }
+
+    .lifeSizeImage {
+        height: auto;
+        width: 90%;
+    }
+
+    .borderContainer {
+        border: none;
+        box-sizing: content-box;
+    }
 }
